--- a/src/main/resources/templates/sign/mypage.html
+++ b/src/main/resources/templates/sign/mypage.html
@@ -102,7 +102,7 @@
                         <div class="account-box">
                             <div class="service-box">
                                 <div class="service-icon">
-                                    <a th:href="@{/boardList}"><i class="fa-solid fa-list"></i><</a>
+                                    <a th:href="@{/myBoardList}"><i class="fa-solid fa-list"></i><</a>
                                 </div>
                                 <div class="service-desc">
                                     <h4>게시글 목록</h4><br>
