--- a/src/main/resources/templates/recipe/getRecipe.html
+++ b/src/main/resources/templates/recipe/getRecipe.html
@@ -31,7 +31,8 @@
  <th:block layout:fragment="content">
     <!-- Single Post Section Begin -->
     <section class="single-post spad">
-    <input th:type="hidden" id="recipe_seq" name="recipe_seq" th:value="${recipe.recipe_seq}">
+    	<input th:type="hidden" id="recipe_seq" name="recipe_seq" th:value="${recipe.recipe_seq}">
+    	<input th:type="hidden" id="good" name="good" th:value="${recipe.good}">
         <input th:type="hidden" id="username" name="username" th:if="${session.loginMember != null}" th:value="${session.loginMember.username}">
         <input th:type="hidden" id="heart" name="heart" th:value="${heart}">
         <center><div class="single-post__hero set-bg" style="height: 500px;"><img th:src="@{/image/}+ ${recipe.filename}"></div></center>
@@ -43,7 +44,7 @@
                             <h2 th:text="${recipe.recipe_name}"></h2>
                         </div>
                     </div>
-                     <!-- 좋아요 버튼 시작 -->
+                      <!-- 좋아요 버튼 시작 -->
                     <div class="single-post__social__item" th:id="heart_area" th:if="${heart.toString().equals('0')}">
                         <ul>
                             <li>
@@ -145,65 +146,62 @@
     <script src="https://kit.fontawesome.com/f9c1d37a26.js" crossorigin="anonymous"></script>
     <script type="text/javascript">
 
-        $(document).ready(function () {
-            let heart = $("#heart").val();
-            const recipe_seq = $("#recipe_seq").val();
-            const username = $("#username").val();
-            var html = "";
+    $(document).ready(function () {
+        let heart = $("#heart").val();
+        const good = $("#good").val();
+        const recipe_seq = $("#recipe_seq").val();
+        const username = $("#username").val();
 
-            console.log(username);
-            console.log(heart);
-          //  if (heart > 0) {
-                // 좋아요 취소
-                $('#deleteHeart').on('click', function () {
-                    $.ajax({
-                        url: '/heart',
-                        type: 'POST',
-                        contentType: 'application/json',
-                        data: JSON.stringify({
-                            'recipe_seq': recipe_seq,
-                            'username': username
-                        }),
-                        success: function (data) {
-                            alert('레시피 좋아요 취소');
-                            console.log("data=", data);
-                            $("#heart").val(data);
-                            location.reload();
-                            // $("#heart_area").load(location.href+' #heart_area');
-                        }, error: function () {
-                            console.log('좋아요 취소 실패 다시 시도해주세요.')
-                        }
-                    });
+        console.log(username);
+        console.log(heart);
+            // 좋아요 취소
+            $('#deleteHeart').on('click', function () {
+                $.ajax({
+                    url: '/heart',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify({
+                        'recipe_seq': recipe_seq,
+                        'username': username,
+                        'good': good
+                    }),
+                    success: function (data) {
+                        alert('레시피 좋아요 취소');
+                        console.log("data=", data);
+                        $("#heart").val(data);
+                        location.reload();
+                    }, error: function () {
+                        console.log('좋아요 취소 실패 다시 시도해주세요.')
+                    }
                 });
-            //} else {
-                // 좋아요
-                $('#insertHeart').on('click', function () {
-                    $.ajax({
-                        url: '/heart',
-                        type: 'POST',
-                        contentType: 'application/json',
-                        data: JSON.stringify({
-                            'recipe_seq': recipe_seq,
-                            'username': username
-                        }),
-                        success: function (data) {
-                            alert('레시피 좋아요');
-                            console.log("data=", data);
-                            $("#heart").val(data);
-                            location.reload();
-                            // $("#heart_area1").load(location.href+' #heart_area1');
-                        }, error: function () {
-                            console.log('좋아요 실패 다시 시도해주세요.')
-                        }
-                    });
+            });
+            // 좋아요
+            $('#insertHeart').on('click', function () {
+                $.ajax({
+                    url: '/heart',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify({
+                        'recipe_seq': recipe_seq,
+                        'username': username,
+                        'good': good
+                    }),
+                    success: function (data) {
+                        alert('레시피 좋아요');
+                        console.log("data=", data);
+                        $("#heart").val(data);
+                        location.reload();
+                    }, error: function () {
+                        console.log('좋아요 실패 다시 시도해주세요.')
+                    }
                 });
-            //}
+            });
 
-            if(document.getElementById("username").value == "") {
-                alert("로그인 후 작성가능합니다.");
-                return false;
-            }
-            return true;
+        if(document.getElementById("username").value == "") {
+            alert("로그인 후 작성가능합니다.");
+            return false;
+        }
+        return true;
         });
     </script>
     </th:block>
