--- a/src/main/resources/templates/sign/login.html
+++ b/src/main/resources/templates/sign/login.html
@@ -27,29 +27,17 @@
                         <div class="w-100">
 <!--                            <h3 class="mb-4">Sign In</h3>-->
                         </div>
-                        <div class="w-100">
-                            <p class="social-media d-flex justify-content-end">
-                                <a href="#" class="social-icon d-flex align-items-center justify-content-center"><span class="fa fa-google"></span></a>
-                                <a href="#" class="social-icon d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a>
-                            </p>
-                        </div>
                     </div>
                     <form class="login-form" method="post" th:action="@{/login}">
                         <div class="form-group">
                             <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-user"></span></div>
-                            <input type="text" id="username" value="member11" name="username" class="form-control rounded-left" placeholder="아이디">
+                            <input type="text" id="username" name="username" class="form-control rounded-left" th:value="admin123" placeholder="아이디">
                         </div>
                         <div class="form-group">
                             <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-lock"></span></div>
-                            <input type="password" id="password" value="member1111" name="password" class="form-control rounded-left" placeholder="비밀번호">
+                            <input type="password" id="password" name="password" class="form-control rounded-left" th:value="admin123123" placeholder="비밀번호">
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <div class="w-100">
-                                <label class="checkbox-wrap checkbox-primary mb-0">자동 로그인
-                                    <input type="checkbox">
-                                    <span class="checkmark"></span>
-                                </label>
-                            </div>
                             <div class="w-100 d-flex justify-content-end">
                                 <button type="submit" class="btn btn-primary rounded submit">Login</button>
                             </div>
