--- a/src/main/resources/templates/funding/getFunding.html
+++ b/src/main/resources/templates/funding/getFunding.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="col-xl-7 col-lg-7 col-md-6">
                     <div class="single-product-details">
-                    <form th:method="post" th:action="@{/purchase}">
+                    <form th:method="post" th:action="@{/fundingPurchase}">
                     <input type="hidden" name="funding_seq" id="funding_seq" th:value="${funding.funding_seq}">
                     <input type="hidden" name="price" id="price" th:value="${funding.price}">
                         <center><h2 th:text="${funding.funding_name}"></h2><br></center>
